fixed overflow bug

--- a/client/assets/css/hangout.css
+++ b/client/assets/css/hangout.css
@@ -150,6 +150,7 @@ form button {
 .users {
 	height: 100%;
 	background: #f7f7f7;
+	overflow: scroll;
 }
 
 .users .user {
